#05 - LA - Change cursor to pointer when selecting answer + Add tabIndex for accessibility + Restructure Preamble to no longer include isVisible - moved isVisible up a level to Step

--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -1,5 +1,5 @@
 .step-content {
-    max-width: 50%;
+    width: 50%;
     word-wrap: break-word;
 }
 
@@ -21,7 +21,7 @@
     font-weight: 700;
 }
 
-hr.step-content-divider {
+hr.step-divider {
     box-shadow: 0px 0.7px 0px 0px #EEEEEE;
     margin: 15px 5px 20px;
 }
@@ -56,6 +56,7 @@ hr.step-content-divider {
     box-sizing: border-box;
     border: 2px solid rgba(0, 75, 135, 1);
     color: #000000;
+    cursor: pointer;
 }
 
 .qas-answer:hover {
